--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,10 @@
 @import "reset.css";
+@import url('https://fonts.googleapis.com/css?family=Oswald:200,300,400,500,600,700&subset=cyrillic');
 
 body {
   color: #000;
+
+  font-family: Helvetica;
 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -121,17 +124,16 @@ h1, h2, h3 {
 }
 
 h1 {
-  margin-top: 2560px;
-  margin-bottom: 150px;
+  margin-top: -420px;
+  margin-bottom: 30px;
 
   color: rgb(250 250 250);
 
   font-size: 50px;
   line-height: 200px;
 }
-
 h2 {
-  margin-top: 43px;
+  margin-top: 10px;
 
   font-size: 32px;
   line-height: 36px;
@@ -143,11 +145,16 @@ h3 {
   font-size: 28px;
   line-height: 34px;
 }
+h4 {
+  margin-top: 36px;
+  margin-left: 338px;
 
+  font-size: 28px;
+  line-height: 34px;
+}
 p {
-  margin-top: 50px;
+  margin-top: 200px;
 
-  font-family: 'PT Sans', sans-serif;
   font-size: 22px;
   line-height: 34px;
 }
@@ -156,4 +163,166 @@ p + p {
   margin-top: 29px;
 
   line-height: 10px;
+}
+
+.Hi {
+  position: absolute;
+  z-index: -1;
+  right: 530px;
+  bottom: 0;
+
+  width: 550px;
+  margin-bottom: 270px;
+}
+.HELV {
+  position: absolute;
+  z-index: -1;
+  right: 870px;
+  bottom: 0;
+
+  width: 300px;
+  margin-bottom: -330px;
+}
+.HELVT {
+  margin-top: -130px;
+  margin-right: -350px;
+  margin-bottom: 150px;
+
+  color: #000000;
+
+  font-family: "Helvetica", sans-serif;
+  font-size: 50px;
+  line-height: 200px;
+}
+.GEOR {
+  position: absolute;
+  z-index: -1;
+  right: 870px;
+  bottom: 0;
+
+  width: 300px;
+  margin-bottom: -550px;
+}
+.GEORT {
+  margin-top: -80px;
+  margin-right: -350px;
+  margin-bottom: 150px;
+
+  color: #000000;
+
+  font-family: "Georgia", sans-serif;
+  font-size: 50px;
+  line-height: 200px;
+}
+.PROX{
+  position: absolute;
+  z-index: -1;
+  right: 870px;
+  bottom: 0;
+
+  width: 300px;
+  margin-bottom: -770px;
+}
+.PROXT{
+  margin-top: -50px;
+  margin-right: -350px;
+  margin-bottom: 150px;
+
+  color: #000000;
+
+  font-family: "Proxima Nova", sans-serif;
+  font-size: 50px;
+  line-height: 200px;
+}
+.KIM{
+  position: absolute;
+  z-index: -1;
+  right: 0px;
+  bottom: 0;
+
+  width: 300px;
+  margin-bottom: -710px;
+}
+.PROXT1 {
+  margin-top: 160px;
+  margin-left: 339px;
+
+  font-family: "Proxima Nova", sans-serif;
+  font-size: 30px;
+  font-style: bold;
+  line-height: 50px;
+}
+.OSW{
+  position: absolute;
+  z-index: -1;
+  right: 870px;
+  bottom: 0;
+
+  width: 300px;
+  margin-bottom: -1250px;
+}
+
+.OSWT{
+  margin-top: -80px;
+  margin-right: -350px;
+  margin-bottom: 150px;
+
+  color: #000000;
+
+  font-family: "Oswald", sans-serif;
+  font-size: 50px;
+  line-height: 200px;
+}
+.custom{
+  right: 16px;
+
+  margin-top: -140px;
+  margin-bottom: 150px;
+
+  color: #000000;
+
+  font-size: 50px;
+  line-height: 200px;
+}
+.displayContainer {
+  width: 728px;
+  height: 170px;
+  margin: 10px auto 0;
+  margin-top: -100px;
+
+  opacity: .8;
+  color: rgb(255 255 255);
+  background-color: rgb(39 180 232);
+
+  font-size: 30px;
+  font-style: bold;
+  line-height: 50px;
+}
+.PIN {
+  position: absolute;
+  top: 1970px;
+  left: 1050px;
+
+  width: 80px;
+
+  transform: rotate(5deg);
+
+  opacity: .9;
+}
+.custom1{
+  right: 16px;
+
+  margin-top: -150px;
+  margin-bottom: 150px;
+
+  color: #000000;
+
+  font-size: 50px;
+  line-height: 200px;
+}
+.inlinePaddingV1 {
+  padding: 4px 7px;
+
+  color: rgb(255 255 255);
+  background-color: rgb(39 180 232);
 }
